# math-operations-interpreter

./: README.md  pyproject.toml  requirements.txt
src/: config.py  enums.py  exceptions.py  expressions.py  interfaces.py  interpreter.py  lexical_processor.py  main.py  tokens.py  tokens_parser.py
src/commands/: __init__.py  base_commands.py  interfaces.py  math_commands.py
tests/: conftest.py  test_interpreter.py  test_lexical_processor.py  test_tokens_parser.py
