[project]
name = 'Math operations interpreter'

[tool.mypy]
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['alembic/']

# Avoiding "skipping analyzing 'celery' error":
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
